--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://willfda.github.io/kasa_app/",
+  "homepage": "https://willfda.github.io/kasa_app",
   "name": "kasa_app",
   "version": "0.1.0",
   "private": true,
